Ajuste filtro por gerente

--- a/src/app/componentes/chamados/chamados-visualizacao-user/chamados-visualizacao-user.component.css
+++ b/src/app/componentes/chamados/chamados-visualizacao-user/chamados-visualizacao-user.component.css
@@ -20,6 +20,21 @@
     justify-content: center;
 }
 
+.pesquisa_filtro{
+    border: none;
+    padding: 10px;
+    width: 100%;
+  }
+
+.ano label{
+    margin-right: 10px;
+}
+
+.filtrar{
+    
+    margin-left: 20px;
+}
+
 label {
     font-size: 20px;
 }
