--- a/src/app/componentes/area-administrativa/area-administrativa.component.html
+++ b/src/app/componentes/area-administrativa/area-administrativa.component.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="direita">
-                        <button (click)="openDialogResumo()">Relatórios</button>
+                        <button (click)="openDialogResumo()">Filtros</button>
                         <img src="../../../assets/imagens/relatorio.png" alt="">
                     </div>
 
