--- a/src/app/componentes/chamados/chamado-individual/chamado-individual.component.html
+++ b/src/app/componentes/chamados/chamado-individual/chamado-individual.component.html
@@ -46,7 +46,7 @@
               
                       <div class="descricao_problema">
                         <label >Descrição do problema : </label>
-                        <textarea value="{{chamado?.desc_problema}}" disabled placeholder="Descreva o problema detalhadamente para que o técnico tenha um diagnostico com uma melhor precisao" ></textarea>
+                        <textarea value="{{chamado?.desc_problema}}" disabled placeholder="Descreva o problema detalhadamente para que o técnico tenha um diagnóstico com uma melhor precisão" ></textarea>
                       </div>
               
 
