--- a/src/app/componentes/gerar-chamado/gerar-chamado.component.html
+++ b/src/app/componentes/gerar-chamado/gerar-chamado.component.html
@@ -39,7 +39,7 @@
 
         <div class="descricao_problema">
           <label >*Descrição do problema : </label>
-          <textarea formControlName="desc_problema" [ngClass]="{'erro_input': erro == true && chamadosForm.value.desc_problema == ''}" name="desc_problema" required placeholder="Descreva o problema detalhadamente para que o técnico tenha um diagnostico com uma melhor precisao"></textarea>
+          <textarea formControlName="desc_problema" [ngClass]="{'erro_input': erro == true && chamadosForm.value.desc_problema == ''}" name="desc_problema" required placeholder="Descreva o problema detalhadamente para que o técnico tenha um diagnóstico com uma melhor precisão"></textarea>
         </div>
 
         <div class="arquivo">
